# ccd

./: CMakeLists.txt  README.md
docs/: 01_setup_env.md  02_project_layout.md  03_c_struct_typedef.md  04_c_memory_pointers.md  05_vector_theory.md  06_vector_impl.md  07_file_io.md  08_tokenizer_concept.md  09_enum_token_type.md  10_tokenizer_loop.md  11_tokenizer_details.md  12_statement_unit_concept.md  13_statement_unit_impl.md  14_decl_concept.md  15_decl_parser.md  intro.md
include/: ast.h  ccd_cli.h  decl_parser.h  hash_map.h  parser.h  token.h  tokenizer.h  unit_scanner.h  utils.h  vector.h
include/decl_parser_impl/: decl_parser_impl.h  decl_specifier.h  decl_unit.h  declaration_unit.h  declarator.h  scope.h
include/decl_parser_impl/scope_impl/: symbol.h
include/ir_impl/: ast_node.h  ir_impl.h
include/parser_impl/: c_type_info.h  c_type_info_impl.h  declaration.h  expression.h  expression_impl.h  expression_operator_impl.h  expression_simple_impl.h  literal_value.h  parser_impl.h  statement.h
include/tokenizer_impl/: token.h  tokenizer_impl.h
include/unit_scanner_impl/: statement_unit.h  statement_unit_compound_impl.h  statement_unit_declaration_impl.h  statement_unit_impl.h  statement_unit_loop_impl.h  unit_scanner_impl.h
src/: CMakeLists.txt  ccd_cli.c  hash_map.c  main.c  token.c  tokenize_literal.c  tokenize_operator.c  tokenize_preprocessor.c  tokenize_space.c  tokenizer.c  unit_scanner.c  utils.c  vector.c
src/decl_parser/: decl_parser.c  decl_specifier.c  decl_unit.c  declarator.c  scope.c
src/ir/: ast_node.c  ir_impl.c
src/parser/: c_type_info.c  c_type_info_class.c  c_type_info_func.c  c_type_info_inner.c  c_type_info_ptr.c  c_type_info_simple.c  declaration.c  expression.c  expression_function.c  expression_identifier.c  expression_literal.c  expression_operator.c  expression_simple.c  statement.c
src/tokenizer/: token.c  tokenize_literal.c  tokenize_operator.c  tokenize_space.c
src/unit_scanner/: statement_unit.c  statement_unit_break.c  statement_unit_compound.c  statement_unit_conditional.c  statement_unit_declaration.c  statement_unit_label.c  statement_unit_loop.c  unit_scanner_break.c  unit_scanner_compound.c  unit_scanner_conditional.c  unit_scanner_decl_or_expr.c  unit_scanner_label.c  unit_scanner_loop.c
tests/: CMakeLists.txt  test_alnum_tokenize.c  test_c_types.c  test_decl_parse.c  test_decls.c  test_expressions.c  test_hash_map.c  test_statement_units.c  test_unit_scanner.c  test_vec.c
(+44 files in other folders)
